# neospark-imagegen-cli

./: .gitignore  README.en.md  README.md  README.zh.md  neospark.spec  pyproject.toml  requirements-dev.txt
.claude/skills/neospark-cli/: README.md  SKILL.md
.claude/skills/neospark-cli/scripts/: install.py
.claude/skills/neospark-imagegen-cli/: README.md  SKILL.md
.claude/skills/neospark-imagegen-cli/examples/: sports-poster.md
.github/workflows/: release.yml
src/neospark/: __init__.py  __main__.py  api.py  cli.py  config.py  download.py  polling.py
src/neospark/commands/: auth.py  billing.py  download.py  generate.py  images.py  models.py  sessions.py  status.py
